test_regress/t/t_interface_array_nocolon_bad.out
%Warning-ASCRANGE: t/t_interface_array_nocolon_bad.v:24:24: Ascending instance range connecting to vector: left < right of instance range: [0:2]
                                                          : ... note: In instance 't'
   24 |   foo_intf foos[N] (.x(X));   
      |                        ^
                   ... For warning description see https://verilator.org/warn/ASCRANGE?v=latest
                   ... Use "/* verilator lint_off ASCRANGE */" and lint_on around source to disable this message.
%Warning-ASCRANGE: t/t_interface_array_nocolon_bad.v:25:26: Ascending instance range connecting to vector: left < right of instance range: [1:3]
                                                          : ... note: In instance 't'
   25 |   foo_intf fool[1:3] (.x(X));   
      |                          ^
%Warning-ASCRANGE: t/t_interface_array_nocolon_bad.v:28:24: Ascending instance range connecting to vector: left < right of instance range: [0:2]
                                                          : ... note: In instance 't'
   28 |   foo_subm subs[N] (.x(X));   
      |                        ^
%Warning-ASCRANGE: t/t_interface_array_nocolon_bad.v:29:26: Ascending instance range connecting to vector: left < right of instance range: [1:3]
                                                          : ... note: In instance 't'
   29 |   foo_subm subl[1:3] (.x(X));   
      |                          ^
%Error: Exiting due to
